--- a/config/test_params.yaml
+++ b/config/test_params.yaml
@@ -16,28 +16,28 @@ environments:
       value: [0.0, 0.0] # vx, vy
       name: zero
       type: constant
-  2:
-    current:
-      value: [0.5, 0.0] # vx, vy
-      name: x0.5
-      type: constant
-  3:
-    current:
-      value: [0.0, 0.5] # vx, vy
-      name: y0.5
-      type: constant
-  4:
-    current:
-      value: [0.0, 1.0] # vx, vy
-      name: y1.0
-      type: constant
-  5:
-    current:
-      value: [0.03183, 12.0] # Amplitude, Time Period [h]
-      name: double_gyre
-      type: time-varying
-  6:
-    current:
-      value: [0.5, 6.0] # Amplitude, Time Period [h]
-      name: double_gyre_fast
-      type: time-varying
+  # 2:
+  #   current:
+  #     value: [0.5, 0.0] # vx, vy
+  #     name: x0.5
+  #     type: constant
+  # 3:
+  #   current:
+  #     value: [0.0, 0.5] # vx, vy
+  #     name: y0.5
+  #     type: constant
+  # 4:
+  #   current:
+  #     value: [0.0, 1.0] # vx, vy
+  #     name: y1.0
+  #     type: constant
+  # 5:
+  #   current:
+  #     value: [0.03183, 12.0] # Amplitude, Time Period [h]
+  #     name: double_gyre
+  #     type: time-varying
+  # 6:
+  #   current:
+  #     value: [0.5, 6.0] # Amplitude, Time Period [h]
+  #     name: double_gyre_fast
+  #     type: time-varying
